<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="5dp"
    android:padding="5dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtFriendsName"
        android:text="@string/nama"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-light"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtFriendsJkel"
        android:text="@string/jkel"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-light"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtFriendsMail"
        android:text="@string/mail"
        android:textSize="18sp"
        android:layout_marginTop="6dp"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-light"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtFriendsTelp"
        android:text="@string/telp"
        android:textSize="18sp"
        android:layout_marginTop="6dp"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-light"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtFriendsAlamat"
        android:text="@string/alamat"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-light"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="5dp"
        android:background="@color/black"/>
</LinearLayout>